--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -4,12 +4,10 @@
         <meta name="robots" content="noindex, nofollow">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet"
-              href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="css/style.css">
         <title>Pyregence - Wildfire Risk Models for a Safe & Resilient Grid</title>
-		<meta name="description" content="The next generation of open source wildfire risk models to support decision making for a more safe and resilient electric grid.">
+        <meta name="description" content="The next generation of open source wildfire risk models to support decision making for a more safe and resilient electric grid.">
     </head>
     <body class="home">
         <div class="site">
@@ -20,16 +18,16 @@
                         <div class="col-md-3 col-6 d-flex align-items-center">
                             <a class="navbar-brand" rel="home" href="/" title="Pyregence"><img src="images/pyregence.svg" alt="Pyregence logo" class="real-logo" /><img src="images/pyregence-yellow.svg" class="yellow-logo" alt="Pyregence logo yellow" /></a>
                         </div>
-                        <div class="col-md-9 col-6 mobile-flex">	
-							<div class="mobile-button">
-								<a href="javascript:void(0)" class="icon">
-									<div class="hamburger">
-										<div class="menui top-menu"></div>
-										<div class="menui mid-menu"></div>
-										<div class="menui bottom-menu"></div>
-									</div>
-								</a>
-							</div>
+                        <div class="col-md-9 col-6 mobile-flex">
+                            <div class="mobile-button">
+                                <a href="javascript:void(0)" class="icon">
+                                    <div class="hamburger">
+                                        <div class="menui top-menu"></div>
+                                        <div class="menui mid-menu"></div>
+                                        <div class="menui bottom-menu"></div>
+                                    </div>
+                                </a>
+                            </div>
                             <div class="mobilenav">
                                 <ul id="main-menu" class="navbar ml-auto list-unstyled mb-0">
                                     <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-home" class="nav-item">
@@ -78,40 +76,38 @@
                             <h2 class="text-center text-yellow mb-4">Study it</h2>
                             <div class="row">
                                 <div class="col-md-6 px-2 mb-4">
-									<div class="box-shadow">	
-										<div class="box extreme-weather">
-											<div class="white circle d-flex align-items-center justify-content-center4">
-												<img src="images/extreme-weather.svg" alt="Extreme Weather icon" />
-											</div>
-										</div>
-										<div class="box-content">
-											<h3 class="text-center">Extreme Weather</h3>
-											<div class="yellow-line small my-3"></div>
-											<p class="text-center">Determining weather conditions and other associated factors with large wildfires in the past</p>
-											<div class="text-center readmore">
-												<a href="#">Read More <img src="images/arrow-right-solid.png"></a>
-											</div>
-										</div>
-									</div>
-								</div>
+                                    <div class="box-shadow">
+                                        <div class="box extreme-weather">
+                                            <div class="white circle d-flex align-items-center justify-content-center4">
+                                                <img src="images/extreme-weather.svg" alt="Extreme Weather icon" />
+                                            </div>
+                                        </div>
+                                        <div class="box-content">
+                                            <h3 class="text-center">Extreme Weather</h3>
+                                            <div class="yellow-line small my-3"></div>
+                                            <p class="text-center">Determining weather conditions and other associated factors with large wildfires in the past</p>
+                                            <div class="text-center readmore">
+                                                <a href="#">Read More <img src="images/arrow-right-solid.png"></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="col-md-6 px-2 mb-4">
-									<div class="box-shadow">
-										<div class="box wildfire-science">
-											<div class="white circle d-flex align-items-center justify-content-center">
-												<img src="images/advanced-wildfire-science.svg" alt="Advanced Wildfire Science icon" />
-											</div>
-										</div>
-										<div class="box-content">
-											<h3 class="text-center">Advanced Wildfire Science</h3>
-											<div class="yellow-line small my-3"></div>
-											<p class="text-center">
-												Fundamental scientific research on fuel mapping and fire spread dynamics to inform the next generation of wildfire models
-											</p>
-											<div class="text-center readmore">
-												<a href="#">Read More <img src="images/arrow-right-solid.png"></a>
-											</div>
-										</div>
-									</div>
+                                    <div class="box-shadow">
+                                        <div class="box wildfire-science">
+                                            <div class="white circle d-flex align-items-center justify-content-center">
+                                                <img src="images/advanced-wildfire-science.svg" alt="Advanced Wildfire Science icon" />
+                                            </div>
+                                        </div>
+                                        <div class="box-content">
+                                            <h3 class="text-center">Advanced Wildfire Science</h3>
+                                            <div class="yellow-line small my-3"></div>
+                                            <p class="text-center">Fundamental scientific research on fuel mapping and fire spread dynamics to inform the next generation of wildfire models</p>
+                                            <div class="text-center readmore">
+                                                <a href="#">Read More <img src="images/arrow-right-solid.png"></a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -119,38 +115,38 @@
                             <h2 class="text-center text-yellow mb-4">Build it</h2>
                             <div class="row">
                                 <div class="col-md-6 px-2 mb-4">
-									<div class="box-shadow">
-										<div class="box forecasts">
-											<div class="white circle d-flex align-items-center justify-content-center">
-												<img src="images/wildfire-map-icon.svg" alt="Wildfire Forecasts icon" />
-											</div>
-										</div>
-										<div class="box-content">
-											<h3 class="text-center">Wildfire Forecasts</h3>
-											<div class="yellow-line small my-3"></div>
-											<p class="text-center">Forecast for all wildfire activity in California to inform the management of a safe and reliable grid</p>
-											<div class="text-center">
-												<a href="#" class="btn red text-white">Launch Tool</a>
-											</div>
-										</div>
-									</div>
+                                    <div class="box-shadow">
+                                        <div class="box forecasts">
+                                            <div class="white circle d-flex align-items-center justify-content-center">
+                                                <img src="images/wildfire-map-icon.svg" alt="Wildfire Forecasts icon" />
+                                            </div>
+                                        </div>
+                                        <div class="box-content">
+                                            <h3 class="text-center">Wildfire Forecasts</h3>
+                                            <div class="yellow-line small my-3"></div>
+                                            <p class="text-center">Forecast for all wildfire activity in California to inform the management of a safe and reliable grid</p>
+                                            <div class="text-center">
+                                                <a href="#" class="btn red text-white">Launch Tool</a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-md-6 px-2 mb-4">
-									<div class="box-shadow">
-										<div class="box scenarios">
-											<div class="white circle d-flex align-items-center justify-content-center">
-												<img src="images/wildfire-chart-icon.svg" alt="Wildfire Scenarios icon" />
-											</div>
-										</div>
-										<div class="box-content">
-											<h3 class="text-center">Wildfire Scenarios</h3>
-											<div class="yellow-line small my-3"></div>
-											<p class="text-center">Wildfire scenarios under a changing climate to inform adaptation planning for a more resilient grid</p>
-											<div class="text-center">
-												<a href="#" class="btn grey" onclick="return false;">Coming Soon</a>
-											</div>
-										</div>
-									</div>
+                                    <div class="box-shadow">
+                                        <div class="box scenarios">
+                                            <div class="white circle d-flex align-items-center justify-content-center">
+                                                <img src="images/wildfire-chart-icon.svg" alt="Wildfire Scenarios icon" />
+                                            </div>
+                                        </div>
+                                        <div class="box-content">
+                                            <h3 class="text-center">Wildfire Scenarios</h3>
+                                            <div class="yellow-line small my-3"></div>
+                                            <p class="text-center">Wildfire scenarios under a changing climate to inform adaptation planning for a more resilient grid</p>
+                                            <div class="text-center">
+                                                <a href="#" class="btn grey" onclick="return false;">Coming Soon</a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -166,7 +162,6 @@
                 <div class="row justify-content-center mb-5 mt-3">
                     <div class="col-md-2">
                         <div class="yellow-line"></div>
-
                     </div>
                 </div>
                 <div class="row justify-content-center">
@@ -242,7 +237,6 @@
                             <div class="col-md-3 text-center">
                                 <a class="btn text-white" href="#">Learn More</a>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -303,7 +297,6 @@
                         <div class="circle white"><img src="images/usfs-logo.png" alt="usfs logo" /></div>
                     </div>
                     <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
-
                         <div class="circle white"><img src="images/prometheus.jpg" alt="prometheus logo" /></div>
                     </div>
                     <div class="col-lg-2 col-md-4 col-6 d-flex justify-content-center align-items-center">
@@ -380,8 +373,9 @@
                             <div class="yellow-line small my-3"></div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <p>Shane Romsos<br />
-									<a href="mailto:pyregence@sig-gis.com">pyregence@sig-gis.com</a></p>
+                                    <p><span class="smaller">Project Manager</span><br>
+                                    Shane Romsos<br />
+                                    <a href="mailto:pyregence@sig-gis.com">pyregence@sig-gis.com</a></p>
                                 </div>
                                 <div class="col-md-6">
                                     <p><span class="smaller">Address</span><br>
