--- a/resources/html/not-found.html
+++ b/resources/html/not-found.html
@@ -17,7 +17,10 @@
                 <div class="container">
                     <div class="row align-items-center" id="nav-row">
                         <div class="col-md-3 col-6">
-                            <a class="navbar-brand" rel="home" href="/" title="Pyregence"><img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo" /><img src="images/pyregence-logo-white.svg" class="white-logo" alt="Pyregence logo white" /></a>
+                            <a class="navbar-brand" rel="home" href="/" title="Pyregence">
+                                <img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo" />
+                                <img src="images/pyregence-logo-white.svg" class="white-logo" alt="Pyregence logo white" />
+                            </a>
                         </div>
                         <div class="col-md-9 col-6 mobile-flex">
                             <div class="mobile-button">
@@ -49,15 +52,15 @@
                     </div>
                 </div>
             </div>
-            <div class="content">
+            <div id="content">
                 <div class="container my-5 text-center">
                     <div class="row py-5">
                         <div class="col-md-12">
                             <h1 style="text-align: center;">404 - Page Not Found</h1>
                         </div>
-                    </div>    
+                    </div>
                 </div>
-            </div>    
+            </div>
             <footer class="jumbotron bg-brown mb-0 py-3">
                 <p class="text-white text-center mb-0 smaller">&copy; 2020 Pyregence - All Rights Reserved | Terms</p>
             </footer>
