--- a/resources/html/header.html
+++ b/resources/html/header.html
@@ -1,11 +1,13 @@
 <div class="wrapper-navbar" id="header">
-    <a class="skip-link sr-only sr-only-focusable" href="#content">Skip to content</a>
+    <a class="skip-link sr-only sr-only-focusable" href="#content">
+        Skip to content
+    </a>
     <div class="container">
         <div class="row align-items-center" id="nav-row">
             <div class="col-md-3 col-6">
                 <a class="navbar-brand" rel="home" href="/" title="Pyregence">
-                    <img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo" />
-                    <img src="images/pyregence-logo-white.svg" class="white-logo" alt="Pyregence logo white" />
+                    <img src="images/pyregence-logo.svg" alt="Pyregence logo" class="real-logo">
+                    <img src="images/pyregence-logo-white.svg" class="white-logo" alt="Pyregence logo white">
                 </a>
             </div>
             <div class="col-md-9 col-6 mobile-flex">
