--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -100,6 +100,7 @@
                                                     Determining weather conditions and other factors associated with large wildfires in the past
                                                 </p>
                                                 <div class="text-center readmore mt-auto">
+                                                    <!--<a href="/extreme-weather">Read More <img src="images/arrow-right-solid.png"></a>-->
                                                     <a href="#">Read More <img src="images/arrow-right-solid.png"></a>
                                                 </div>
                                             </div>
@@ -119,6 +120,7 @@
                                                     Advancing research on fuel mapping and fire spread to inform next generation wildfire models
                                                 </p>
                                                 <div class="text-center readmore mt-auto">
+<!--                                                    <a href="/fire-behavior">Read More <img src="images/arrow-right-solid.png"></a>-->
                                                     <a href="#">Read More <img src="images/arrow-right-solid.png"></a>
                                                 </div>
                                             </div>
@@ -212,6 +214,7 @@
                                 </p>
                             </div>
                             <div class="col-md-3 text-center">
+                                <!--<a class="btn text-white" href="/extreme-weather">Learn More</a>-->
                                 <a class="btn text-white" href="#">Learn More</a>
                             </div>
                         </div>
@@ -233,6 +236,7 @@
                                 </p>
                             </div>
                             <div class="col-md-3 text-center">
+                                <!--<a class="btn text-white" href="/fire-behavior">Learn More</a>-->
                                 <a class="btn text-white" href="#">Learn More</a>
                             </div>
                         </div>
@@ -254,6 +258,7 @@
                                 </p>
                             </div>
                             <div class="col-md-3 text-center">
+                                <!--<a class="btn text-white" href="/wildfire-forecasts">Learn More</a>-->
                                 <a class="btn text-white" href="#">Learn More</a>
                             </div>
                         </div>
@@ -275,6 +280,7 @@
                                 </p>
                             </div>
                             <div class="col-md-3 text-center">
+                                <!--<a class="btn text-white" href="/futures-analyses">Learn More</a>-->
                                 <a class="btn text-white" href="#">Learn More</a>
                             </div>
                         </div>
